add LoomBenchmark + minor refactors